<resources>
    <string name="app_name">Yelp by Lokarz</string>
    <string name="photos">Photos</string>
    <string name="categories">Categories</string>
    <string name="hours_of_operation">Hours of Operation</string>
    <string name="address_and_contact">Address and Contact Information</string>
    <string name="ratings_and_snippet">Ratings and Snippet</string>
    <string name="claimed">Claimed</string>
    <string name="not_claimed">Not Claimed</string>
    <string name="are_you_looking_for">Are you looking for?</string>
    <string name="location">Location?</string>
    <string name="location_updated">Location Updated</string>
    <string name="location_not_granted">Location Not Granted</string>

    <string name="best_match">Best Match</string>
    <string name="rating">Rating</string>
    <string name="review_count">Review Count</string>
    <string name="distance">Distance</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="current_location">Current Location</string>
    <string name="visit">Visit</string>
    <string name="sorry_no_result">Sorry! No result found :(</string>
    <string name="getting_location">Getting Location</string>

    <string name="mon">Mon</string>
    <string name="tues">Tues</string>
    <string name="wed">Wed</string>
    <string name="thurs">Thurs</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Mon</string>

</resources>