<?xml version="1.0" encoding="utf-8"?>


<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.lokarz.yelp.view.activity.businessdetails.BusinessDetailsViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".view.activity.businessdetails.BusinessDetailsActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/abl"
            style="@style/AppBarStyleBusinessDetail">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/ctl"
                style="@style/CollapsingStyleBusinessDetail"
                app:title="@{viewModel.businessDetailsLiveData.name}">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_banner"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:scaleType="centerCrop"
                        android:tint="@color/color_dark_65"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_name"
                            style="@style/TitleStyleBusinessDetail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.snippetLiveData}"
                            android:textColor="@android:color/white" />

                        <androidx.appcompat.widget.AppCompatRatingBar
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:max="5"
                            android:rating="@{viewModel.businessDetailsLiveData.rating}" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    style="@style/Toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_collapseMode="pin" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/ContainerStyleBusinessDetail"
                    android:visibility="@{viewModel.showPhotosLiveData ? View.VISIBLE : View.GONE}">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/HeaderStyleBusinessDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photos" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_business_photos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/ContainerStyleBusinessDetail"

                    android:visibility="@{viewModel.showCategoriesLiveData ? View.VISIBLE : View.GONE}">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/HeaderStyleBusinessDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/categories" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_business_categories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat
                    style="@style/ContainerStyleBusinessDetail"

                    android:visibility="@{viewModel.showHoursLiveData ? View.VISIBLE : View.GONE}">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/HeaderStyleBusinessDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hours_of_operation" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_hours_of_operation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <androidx.appcompat.widget.LinearLayoutCompat style="@style/ContainerStyleBusinessDetail">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/HeaderStyleBusinessDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/address_and_contact" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.displayAddressLiveData}" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.businessDetailsLiveData.displayPhone}" />

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>